--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "cinderella": "^0.18.0",
+    "cinderella": "^0.18.1",
     "glamor": "^2.20.40",
     "glamorous": "^4.11.0",
+    "polished": "^1.9.0",
     "prismjs": "^1.8.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
