--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "cinderella": "^0.18.4",
+    "cinderella": "^0.19.2",
     "glamor": "^2.20.40",
     "glamorous": "^4.11.0",
     "polished": "^1.9.0",
     "prismjs": "^1.8.4",
+    "rc-slider": "^8.4.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
