--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "cinderella": "^0.19.4",
+    "cinderella": "^0.21.1",
     "glamor": "^2.20.40",
     "glamorous": "^4.11.0",
     "polished": "^1.9.0",
@@ -15,7 +15,8 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
-    "serve": "^6.4.1"
+    "serve": "^6.4.1",
+    "throttleit": "^1.0.0"
   },
   "scripts": {
     "build": "react-scripts build",
